--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "paper": "^0.10.3" 
   },
   "scripts": {
     "build-css": "node-sass src/styles/ -o src/styles/",
