--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "paper": "^0.10.3" 
+    "react-router-dom": "^4.0.0-beta.6",
+    "paper": "^0.10.3"
   },
   "scripts": {
     "build-css": "node-sass src/styles/ -o src/styles/",
